# ecommerce-review-data-platform

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: batch_pipeline_dag.py
api/: app.py
config/: clients.py  settings.py
dashboard/: streamlit_app.py
data/samples/: reviews_sample.csv
dbt/: README.md  dbt_project.yml  profiles.example.yml
dbt/models/marts/: _marts.yml  mart_category_sentiment.sql  mart_daily_trends.sql
dbt/models/staging/: _sources.yml  stg_reviews.sql
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md
dq/: checks.py  expectations.yaml
ingestion/: batch_ingest.py  fake_review_api.py  stream_producer.py  synthetic_reviews.py
lake/: lake_io.py
ml/: anomaly_detection.py  sentiment.py  topic_model.py  train_sentiment.py
services/: db_config.py
serving/: embedding_utils.py  es_index.py
spark/: _spark.py  bronze_to_silver.py  silver_to_gold.py  streaming_sentiment.py
tests/: test_config_lake.py  test_dq.py  test_ml.py  test_synthetic.py
warehouse/: load_to_warehouse.py
warehouse/ddl/: star_schema.sql
