[project]
name = "ecommerce-review-data-platform"
version = "2.0.0"
description = "End-to-end batch + real-time data platform for e-commerce reviews (Kafka, Spark, Airflow, PostgreSQL, MinIO)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nur Yağmur Tuncer" }]

[tool.setuptools]
packages = ["config", "ingestion", "lake", "spark", "dq", "warehouse", "ml", "serving", "api", "dashboard"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # line length handled by formatter; keep long README-ish strings

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
